unpackaged/main/default/objects/Deduction__c/Deduction__c.object-meta.xml
<CustomObject>
    <description>All deductions to the Engineer will be logged here. This will affect the Engineer wages</description>
    <label>Engineer Deduction</label>
    <nameField>
        <displayFormat>ED-{000000}</displayFormat>
        <label>Deduction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engineer Deductions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>