unpackaged/main/default/objects/Deduction__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Complaint Case related to the Deduction. This entry will be system driven.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>