unpackaged/main/default/objects/Deduction__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date the deduction should participate in the payment run.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>