unpackaged/main/default/objects/Deduction__c/fields/Deduction_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deduction Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engineer_Deductions1</relationshipName>
    <type>Lookup</type>
</CustomField>