unpackaged/main/default/objects/Deduction__c/fields/Deduction_Category__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Category__c</fullName>
    <label>Deduction Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fleet / Warehouse Deductions</fullName>
            </value>
            <value>
                <fullName>Job Related Deductions</fullName>
            </value>
            <value>
                <fullName>Pay Deductions</fullName>
            </value>
            <value>
                <fullName>Vehicle Penalty Charge Deductions</fullName>
            </value>
            <value>
                <fullName>IT Deductions</fullName>
            </value>
            <value>
                <fullName>Fleet Related</fullName>
                <isActive>false</isActive>
                <label>Fleet Related</label>
            </value>
            <value>
                <fullName>Pay Related</fullName>
                <isActive>false</isActive>
                <label>Pay Related</label>
            </value>
            <value>
                <fullName>Penalty Charges</fullName>
                <isActive>false</isActive>
                <label>Penalty Charges</label>
            </value>
            <value>
                <fullName>Workmanship Related</fullName>
                <isActive>false</isActive>
                <label>Workmanship Related</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>