unpackaged/main/default/objects/Deduction__c/fields/Deduction_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deduction Requested By</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>notEqual</operation>
            <value>Partner Community User</value>
        </filterItems>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>notEqual</operation>
            <value>Engineer Partner Community</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Engineer_Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>