unpackaged/main/default/objects/Deduction__c/fields/Deduction_Taken__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Taken__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether the deduction has already been taken.</description>
    <label>Deduction Taken</label>
    <type>Checkbox</type>
</CustomField>