unpackaged/main/default/objects/Deduction__c/fields/Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Type__c</fullName>
    <label>Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deduction_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Deduction_Type</valueSetName>
    </valueSet>
</CustomField>