unpackaged/main/default/objects/Deduction__c/fields/Deduction_WO_Number__c.field-meta.xml
<CustomField>
    <fullName>Deduction_WO_Number__c</fullName>
    <formula>Work_Order__r.WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deduction WO Number</label>
    <type>Text</type>
</CustomField>