unpackaged/main/default/objects/Deduction__c/fields/Engineer_Pay_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Engineer_Pay_Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engineer Pay Requisition</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Service_Resource__c</field>
            <operation>equals</operation>
            <valueField>Engineer_Pay_Requisition__c.Service_Resource__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Engineer_Pay_Requisition__c</referenceTo>
    <relationshipLabel>Engineer Deductions</relationshipLabel>
    <relationshipName>Engineer_Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>