unpackaged/main/default/objects/Deduction__c/fields/Is_User_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Active__c</fullName>
    <formula>Service_Resource__r.Is_User_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>