unpackaged/main/default/objects/Deduction__c/fields/No_Payment_Batch__c.field-meta.xml
<CustomField>
    <fullName>No_Payment_Batch__c</fullName>
    <defaultValue>true</defaultValue>
    <label>No Payment Batch?</label>
    <type>Checkbox</type>
</CustomField>