unpackaged/main/default/objects/Deduction__c/fields/Requisition_Resource__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Resource__c</fullName>
    <formula>Engineer_Pay_Requisition__r.Service_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requisition Resource</label>
    <type>Text</type>
</CustomField>