unpackaged/main/default/objects/Deduction__c/fields/Requisition_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Work_Order__c</fullName>
    <formula>Work_Order__r.WorkOrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requisition Work Order</label>
    <type>Text</type>
</CustomField>