unpackaged/main/default/objects/Deduction__c/fields/Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource__c</fullName>
    <description>The service resource associated with the deduction</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Engineer Deductions</relationshipLabel>
    <relationshipName>Deductions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>