unpackaged/main/default/objects/Deduction__c/fields/Sigma_Processed__c.field-meta.xml
<CustomField>
    <fullName>Sigma_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sigma Processed</label>
    <type>Checkbox</type>
</CustomField>