unpackaged/main/default/objects/Deduction__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Work Order associated to the deduction. Not all deduction can be associated to the Work Order.</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Deductions</relationshipName>
    <type>Lookup</type>
</CustomField>