unpackaged/main/default/objects/Deduction__c/validationRules/Prohibited_Status_changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Prohibited_Status_changes</fullName>
    <active>true</active>
    <description>Nobody can make the next Status changes:
- from &#39;New&#39; to &#39;Processed&#39; / &#39;Paid&#39;,
- from &#39;Approved&#39; to &#39;New&#39; / &#39;Paid&#39;,
- from &#39;Processed&#39; to &#39;New&#39; / &#39;Paid&#39; / &#39;Approved&#39; (Admins/Delene/Katalin only),
- from &#39;Paid&#39; to &#39;New&#39; / &#39;Approved&#39; / &#39;Processed&#39;</description>
    <errorConditionFormula>OR(AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;New&quot;),ISPICKVAL(Status__c, &quot;Processed&quot;)),
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;New&quot;),ISPICKVAL(Status__c, &quot;Paid&quot;)),
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;),ISPICKVAL(Status__c, &quot;New&quot;)),
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;),ISPICKVAL(Status__c, &quot;Paid&quot;)),
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Paid&quot;),ISPICKVAL(Status__c, &quot;New&quot;)),
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Paid&quot;),ISPICKVAL(Status__c, &quot;Approved&quot;)),
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Paid&quot;),ISPICKVAL(Status__c, &quot;Processed&quot;)),
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;),ISPICKVAL(Status__c, &quot;Processed&quot;),
$Profile.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.System_Administrator.X15_Char_Profile_ID__c, $User.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.Katalin_Kallai_User_ID.X15_Char_Profile_ID__c,
$User.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.DeleneDeHaas.X15_Char_Profile_ID__c),
AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Processed&quot;),
OR(ISPICKVAL(Status__c, &quot;Paid&quot;),ISPICKVAL(Status__c, &quot;New&quot;), ISPICKVAL(Status__c, &quot;Approved&quot;)),
$Profile.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.System_Administrator.X15_Char_Profile_ID__c, $User.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.Katalin_Kallai_User_ID.X15_Char_Profile_ID__c,
$User.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.DeleneDeHaas.X15_Char_Profile_ID__c)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>This Status change was prohibited. Please select other Status.</errorMessage>
</ValidationRule>