unpackaged/main/default/objects/Deduction__c/validationRules/Sigma_Processed_restrict_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Sigma_Processed_restrict_edit</fullName>
    <active>true</active>
    <description>Only Katalin to edit this field</description>
    <errorConditionFormula>AND(
ISCHANGED( Sigma_Processed__c ),
$User.Id&lt;&gt;$CustomMetadata.PHASE_2_Profile_IDs__mdt.Katalin_Kallai_User_ID.X15_Char_Profile_ID__c 
)</errorConditionFormula>
    <errorDisplayField>Sigma_Processed__c</errorDisplayField>
    <errorMessage>You do not have the authority to edit this field</errorMessage>
</ValidationRule>